fixed p text-align, line-height and padding

--- a/responsive-layout.css
+++ b/responsive-layout.css
@@ -40,6 +40,7 @@ h1{
 }
 p{
     text-align: start;
+    line-height: 2rem;
     padding: 0 1rem;
 }
 
@@ -206,6 +207,11 @@ footer{
 .padding-bottom{
     padding-bottom: 4rem ;
 }
+
+.padding-bottom-small{
+    padding-bottom: 2rem ;
+}
+
 
 .footer-p{
     color: aqua;
